--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -64,4 +64,6 @@
     <string name="failed_try_again">Gagal, coba lagi dan periksa koneksi internet anda</string>
     <string name="available_balance">Saldo yang tersedia</string>
     <string name="the_amount_of_withdrawals">Jumlah penarikan</string>
+    <string name="error_player">Error inisialisasi YouTubePlayer (%1$s)</string>
+    <string name="video_is_not_available">Video tidak tersedia</string>
 </resources>
