--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -71,4 +71,5 @@
     <string name="how_about_the_show">Bagaimana dengan pertunjukannya?</string>
     <string name="very_good">Sangat bagus!</string>
     <string name="no_reviews">Tidak ada ulasan</string>
+    <string name="dont_have_an_account">Belum punya akun?</string>
 </resources>
