--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -71,4 +71,5 @@
     <string name="how_about_the_show">How about the show?</string>
     <string name="very_good">Very good!</string>
     <string name="no_reviews">No reviews</string>
+    <string name="dont_have_an_account">Don't have an account?</string>
 </resources>
