--- a/app/src/main/res/values-in/strings.xml
+++ b/app/src/main/res/values-in/strings.xml
@@ -72,4 +72,5 @@
     <string name="very_good">Sangat bagus!</string>
     <string name="no_reviews">Tidak ada ulasan</string>
     <string name="dont_have_an_account">Belum punya akun?</string>
+    <string name="loading">Memuat&#8230;</string>
 </resources>
