--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="very_good">Very good!</string>
     <string name="no_reviews">No reviews</string>
     <string name="dont_have_an_account">Do not have an account?</string>
+    <string name="loading">Loading&#8230;</string>
 </resources>
